--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <nav class="nav-top">
             <ul class="nav-elements top-right">
                 <li>
-                    <a href="https://www.gmail-com">Gmail</a>
+                    <a href="https://www.gmail.com">Gmail</a>
                 </li>
                 <li>
                     <a href="https://www.googleimagenes.com">Imagenes</a>
                 </li>
                 <li id="menu"></li>
                 <li class="perfil">
-                    <img id="perfil" alt="cuenta de usuario">
+                    <a href="#">A</a>
                 </li>
             </ul>
         </nav>
