arreglo perfil y menú

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
                 <li>
                     <a href="https://www.googleimagenes.com">Imagenes</a>
                 </li>
-                <li id="menu"></li>
+                <li id="menu-nav-icon">
+                    <a href="#"></a>
+                </li>
                 <li class="perfil">
-                    <a href="#">A</a>
+                    <a href="#"><img src="./recursos/IMG_0437.JPG" alt="foto de perfil"/></a>
                 </li>
             </ul>
         </nav>
@@ -28,7 +30,9 @@
     <main>
         <img src="./recursos/logo-Google.png" id="logo_google" alt="Logo de google">
         <form id="barra-de-busqueda">
-            <input type="search" name="se">
+            <span class="lupa-icono"></span>
+            <input type="search" name="search">
+            <a class="micro-icon" href="#"></a>
         </form>
             <div>
                 <button>Buscar con Google</button>
