--- a/index.html
+++ b/index.html
@@ -30,19 +30,17 @@
     <main>
         <img src="./recursos/logo-Google.png" id="logo_google" alt="Logo de google">
         <form id="barra-de-busqueda">
-            <span class="lupa-icono"></span>
-            <input type="search" name="search">
-            <a class="micro-icon" href="#"></a>
+             <input type="search" name="search">
         </form>
             <div>
                 <button>Buscar con Google</button>
                 <button>Voy a tener suerte</button>
             </div>
-            <p>Ofrecido por Google en <a href="">English</a></p>
+            <p class="anuncio">Ofrecido por Google en <a href="">English</a></p>
     </main>
     <footer>
-        <p>Colombia</p>
-        <nav>
+        <p class="country">Colombia</p>
+        <nav class="nav-bottom-elements">
             <ul class="nav-elements bottom-left">
                 <li>
                     <a href="">Sobre Google</a>
