--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </ul>
             <ul class="nav-elements bottom-right">
                 <li>
-                    <a href="">Privacida</a>
+                    <a href="">Privacidad</a>
                 </li>
                 <li>
                     <a href="">Condiciones</a>
